--- a/index.html
+++ b/index.html
@@ -16,15 +16,24 @@
    <main class="h-100 mt-1">
     <div class="container-fluid">
         <div class="row">
-            <div class="col-md-4 gx-2 p-5 bg-success text-center text-info-emphasis fw-bold ">sidebar</div>
+            <div class="col-md-6 col-lg-4 gx-2 p-5 bg-success text-center text-info-emphasis fw-bold ">sidebar</div>
 
             <div class="col-md-8">
-                <div class="d-flex flex-column">
-                    <div class="col  bg-primary text-center text-info-emphasis fw-bold">main</div>
-                    <div class="d-flex align-items-center mt-2 ">
-                        <div class="col-4-lg  bg-warning flex-grow-1 me-1 text-center text-info-emphasis fw-bold">content-1</div>
-                        <div class="col-4-lg  bg-danger flex-grow-1 me-1 text-center text-info-emphasis fw-bold">content-2</div>
-                        <div class="col-4-lg   flex-grow-1 text-center text-info-emphasis fw-bold">content-3</div>
+                <div class="row d-flex flex-column px-2">
+                    <div class="col  bg-primary text-center text-info-emphasis fw-bold mt-2 px-2">main</div>
+                    <div class="row d-flex align-items-center mt-2 ">
+                        <div class="col-md-6 col-lg-4 px-2 mt-2">
+                        <div class="  bg-warning flex-grow-1 px-1 text-center text-info-emphasis fw-bold">content-1</div>
+
+                        </div>
+                        <div class="col-md-6 col-lg-4 px-2 mt-2">
+                            <div class="  bg-danger flex-grow-1 px-1 text-center text-info-emphasis fw-bold">content-2</div>
+
+                        </div>
+                        <div class="col-md-6 col-lg-4 px-2 mt-2">
+                            <div class=" bg-warning flex-grow-1 text-center px-1 text-info-emphasis fw-bold">content-3</div>
+
+                        </div>
                     </div>
                 </div>
                 <div class="col p-5 bg-secondary mt-2 text-center text-info-emphasis fw-bold">footer</div>
